--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,16 @@
     "angular-bootstrap": "~0.14.3",
     "moment": "~2.10.6",
     "angular": "~1.5.3",
-    "ng-youtube-embed": "^0.2.3",
     "firebase": "^3.2.1",
-    "angularfire": "^2.0.1"
+    "angularfire": "^2.0.1",
+    "videogular": "^1.4.4",
+    "videogular-themes-default": "^1.4.4",
+    "videogular-controls": "^1.4.4",
+    "videogular-buffering": "^1.4.4",
+    "videogular-overlay-play": "^1.4.4",
+    "videogular-poster": "^1.4.4",
+    "videogular-ima-ads": "^1.4.4",
+    "videogular-angulartics": "^1.4.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
