--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "bootstrap": "~3.3.5",
     "angular-bootstrap": "~0.14.3",
     "moment": "~2.10.6",
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "ng-youtube-embed": "^0.2.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
