--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
     "angular-bootstrap": "~0.14.3",
     "moment": "~2.10.6",
     "angular": "~1.5.3",
-    "ng-youtube-embed": "^0.2.3"
+    "ng-youtube-embed": "^0.2.3",
+    "firebase": "^3.2.1",
+    "angularfire": "^2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
